--- a/wiki/cs/Manual;All_workbenches_at_a_glance.html
+++ b/wiki/cs/Manual;All_workbenches_at_a_glance.html
@@ -69,11 +69,8 @@
 <li><a href="../Manual;The_Community.html" title="Manual:The Community">The community</a></li></ul></div>
 <p>Jak ji&#382; bylo zm&iacute;n&#283;no, FreeCAD nab&iacute;z&iacute; r&#367;zn&eacute; pracovn&iacute; prost&#345;ed&iacute;, z nich&#382; ka&#382;d&eacute; je ur&#269;eno pro jin&eacute; aplikace. A&#269;koli se mno&#382;stv&iacute; mo&#382;nost&iacute; m&#367;&#382;e na prvn&iacute; pohled zd&aacute;t ohromuj&iacute;c&iacute;, ka&#382;d&eacute; pracovn&iacute; prost&#345;ed&iacute; je navr&#382;eno tak, aby vyhovovalo konkr&eacute;tn&iacute;m &uacute;kol&#367;m, co&#382; zvy&scaron;uje celkovou efektivitu pracovn&iacute;ho postupu a p&#345;izp&#367;sobuje ho r&#367;zn&yacute;m po&#382;adavk&#367;m projektu. Nap&#345;&iacute;klad pracovn&iacute; plocha Part Design je ide&aacute;ln&iacute; pro vytv&aacute;&#345;en&iacute; a &uacute;pravy pevn&yacute;ch 3D model&#367;, zat&iacute;mco pracovn&iacute; plocha Draft je perfektn&iacute; pro 2D kreslen&iacute; a navrhov&aacute;n&iacute;. Tento modul&aacute;rn&iacute; p&#345;&iacute;stup umo&#382;&#328;uje u&#382;ivatel&#367;m p&#345;izp&#367;sobit rozhran&iacute; a sadu n&aacute;stroj&#367; podle sv&yacute;ch konkr&eacute;tn&iacute;ch pot&#345;eb a preferenc&iacute;.
 </p><p>Na t&eacute;to str&aacute;nce najdete informace o z&aacute;kladn&iacute; sad&#283; pracovn&iacute;ch ploch a jejich funkc&iacute;ch. Dal&scaron;&iacute; informace najdete na str&aacute;nk&aacute;ch jednotliv&yacute;ch <a href="../Workbenches.html" title="Workbenches">pracovn&iacute;ch ploch</a> v dokumentaci FreeCADu, kde je uveden jejich &uacute;pln&yacute; seznam.
+</p><p>Zaj&iacute;mavou funkc&iacute; programu FreeCAD je mo&#382;nost z&iacute;skat dal&scaron;&iacute; informace po najet&iacute; my&scaron;&iacute; na p&#345;&iacute;kaz. Tato funkce n&aacute;pov&#283;dy pom&aacute;h&aacute; u&#382;ivatel&#367;m pochopit, co ka&#382;d&yacute; p&#345;&iacute;kaz d&#283;l&aacute;, poskytuje vod&iacute;tko a usnad&#328;uje u&#269;en&iacute; a orientaci v softwaru.
 </p>
-<div lang="en" dir="ltr" class="mw-content-ltr">
-<p>An interesting feature of FreeCAD is the ability to obtain additional information by hovering the mouse over a command. This tooltip functionality helps users understand what each command does, providing guidance and making it easier to learn and navigate the software.
-</p>
-</div>
 <figure class="mw-default-size mw-halign-none" typeof="mw:File"><a href="../index.php?title=FreeCAD_022_ObjectDesc.png&amp;filetimestamp=20240710134246&amp;.html" class="mw-file-description"><img src="../File/FreeCAD_022_ObjectDesc.png" decoding="async" width="606" height="361" class="mw-file-element" data-file-width="606" data-file-height="361"></a><figcaption></figcaption></figure>
 <div lang="en" dir="ltr" class="mw-content-ltr">
 <p>Four workbenches are also designed to work in pairs, with one fully incorporated into the other: BIM contains all the Draft tools, and Part Design includes all the Sketcher tools. However, for clarity, they are separated below.
@@ -1325,13 +1322,13 @@
 </div>
 <!-- 
 NewPP limit report
-Cached time: 20260112060109
+Cached time: 20260112060123
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.477 seconds
-Real time usage: 0.756 seconds
-Preprocessor visited node count: 642/1000000
+CPU time usage: 0.519 seconds
+Real time usage: 0.684 seconds
+Preprocessor visited node count: 641/1000000
 Post&#8208;expand include size: 8634/2097152 bytes
 Template argument size: 944/2097152 bytes
 Highest expansion depth: 5/100
@@ -1341,13 +1338,13 @@ Unstrip post&#8208;expand size: 2868/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   12.387      1 -total
- 69.07%    8.555      1 Template:Manual:TOC
- 57.83%    7.163      1 Manual:Summary/cs
- 26.07%    3.229      2 Template:Docnav
+100.00%    7.600      1 -total
+ 69.84%    5.308      1 Template:Manual:TOC
+ 54.25%    4.123      1 Manual:Summary/cs
+ 23.08%    1.754      2 Template:Docnav
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:410739-0!canonical and timestamp 20260112060108 and revision id 1737215. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:410739-0!canonical and timestamp 20260112060122 and revision id 1737217. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
