--- a/wiki/cs/Manual;All_workbenches_at_a_glance.html
+++ b/wiki/cs/Manual;All_workbenches_at_a_glance.html
@@ -72,10 +72,8 @@
 </p><p>Zaj&iacute;mavou funkc&iacute; programu FreeCAD je mo&#382;nost z&iacute;skat dal&scaron;&iacute; informace po najet&iacute; my&scaron;&iacute; na p&#345;&iacute;kaz. Tato funkce n&aacute;pov&#283;dy pom&aacute;h&aacute; u&#382;ivatel&#367;m pochopit, co ka&#382;d&yacute; p&#345;&iacute;kaz d&#283;l&aacute;, poskytuje vod&iacute;tko a usnad&#328;uje u&#269;en&iacute; a orientaci v softwaru.
 </p>
 <figure class="mw-default-size mw-halign-none" typeof="mw:File"><a href="../index.php?title=FreeCAD_022_ObjectDesc.png&amp;filetimestamp=20240710134246&amp;.html" class="mw-file-description"><img src="../File/FreeCAD_022_ObjectDesc.png" decoding="async" width="606" height="361" class="mw-file-element" data-file-width="606" data-file-height="361"></a><figcaption></figcaption></figure>
-<div lang="en" dir="ltr" class="mw-content-ltr">
-<p>Four workbenches are also designed to work in pairs, with one fully incorporated into the other: BIM contains all the Draft tools, and Part Design includes all the Sketcher tools. However, for clarity, they are separated below.
+<p>&#268;ty&#345;i pracovn&iacute; plochy jsou tak&eacute; navr&#382;eny tak, aby fungovaly v p&aacute;rech, p&#345;i&#269;em&#382; jedna je pln&#283; integrov&aacute;na do druh&eacute;: BIM obsahuje v&scaron;echny n&aacute;stroje Draft a Part Design obsahuje v&scaron;echny n&aacute;stroje Sketcher. Pro p&#345;ehlednost jsou v&scaron;ak n&iacute;&#382;e uvedeny odd&#283;len&#283;.
 </p>
-</div>
 <div lang="en" dir="ltr" class="mw-content-ltr">
 <meta property="mw:PageProp/toc">
 <h3><span class="mw-headline" id="Part">Part</span></h3>
@@ -1322,13 +1320,13 @@
 </div>
 <!-- 
 NewPP limit report
-Cached time: 20260112060123
+Cached time: 20260112060155
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.519 seconds
-Real time usage: 0.684 seconds
-Preprocessor visited node count: 641/1000000
+CPU time usage: 0.493 seconds
+Real time usage: 0.742 seconds
+Preprocessor visited node count: 640/1000000
 Post&#8208;expand include size: 8634/2097152 bytes
 Template argument size: 944/2097152 bytes
 Highest expansion depth: 5/100
@@ -1338,13 +1336,13 @@ Unstrip post&#8208;expand size: 2868/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%    7.600      1 -total
- 69.84%    5.308      1 Template:Manual:TOC
- 54.25%    4.123      1 Manual:Summary/cs
- 23.08%    1.754      2 Template:Docnav
+100.00%    9.409      1 -total
+ 63.56%    5.980      1 Template:Manual:TOC
+ 46.13%    4.340      1 Manual:Summary/cs
+ 28.30%    2.663      2 Template:Docnav
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:410739-0!canonical and timestamp 20260112060122 and revision id 1737217. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:410739-0!canonical and timestamp 20260112060154 and revision id 1737219. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
