--- a/wiki/de/TechDraw_Preferences.html
+++ b/wiki/de/TechDraw_Preferences.html
@@ -123,11 +123,11 @@
 <p><span id="Tools"></span>
 </p>
 <h3><span class="mw-headline" id="Werkzeuge">Werkzeuge</span></h3>
-<ul><li><b>Ma&szlig;-Werkzeuge</b>: Den Typ der Bema&szlig;ungswerkzeuge f&uuml;r die Symbolleiste ausw&auml;hlen. Unabh&auml;ngig davon, f&uuml;r welche Option man sich entscheidet, sind alle Werkzeuge jederzeit im Men&uuml; und &uuml;ber Tastenkombinationen verf&uuml;gbar. Die Optionen sind: <span style="font-size:small;"><a href="../de/Release_notes_1.0.html" title="Release notes 1.0/de">eingef&uuml;hrt in 1.0</a></span>
+<ul><li><b>Werkzeuge f&uuml;r Ma&szlig;eintr&auml;ge</b>: Den Typ der Bema&szlig;ungswerkzeuge f&uuml;r die Symbolleiste ausw&auml;hlen. Unabh&auml;ngig davon, f&uuml;r welche Option man sich entscheidet, sind alle Werkzeuge jederzeit im Men&uuml; und &uuml;ber Tastenkombinationen verf&uuml;gbar. Die Optionen sind: <span style="font-size:small;"><a href="../de/Release_notes_1.0.html" title="Release notes 1.0/de">eingef&uuml;hrt in 1.0</a></span>
 <ul><li><i>Einzelnes Werkzeug</i>: Ein <a href="../de/TechDraw_Dimension.html" title="TechDraw Dimension/de">einziges Werkzeug</a> f&uuml;r alle Ma&szlig;e in der Symbolleiste: Abstand, Abstand X/Y, Winkel, Radius. Weitere Optionen im Dropdown-Men&uuml;.</li>
 <li><i>Getrennte Werkzeuge</i>: Individuelle Werkzeuge f&uuml;r jedes Ma&szlig;werkzeug.</li>
-<li><i>Beides</i>: Man verf&uuml;gt sowohl &uuml;ber das 'Einzelwerkzeug' als auch &uuml;ber die separaten Werkzeuge.</li></ul></li>
-<li><b>Ma&szlig;-Werkzeugdurchmesser/Radius-Modus</b>: Bei Verwendung des Werkzeugs <a href="../de/TechDraw_Dimension.html" title="TechDraw Dimension/de">Ma&szlig;</a> kann man ausw&auml;hlen, wie Kreise und B&ouml;gen behandelt werden sollen: <span style="font-size:small;"><a href="../de/Release_notes_1.0.html" title="Release notes 1.0/de">eingef&uuml;hrt in 1.0</a></span>
+<li><i>Beide</i>: Man verf&uuml;gt sowohl &uuml;ber das 'Einzelwerkzeug' als auch &uuml;ber die separaten Werkzeuge.</li></ul></li>
+<li><b>Ma&szlig;werkzeugmodus Durchmesser/Radius</b>: Bei Verwendung des Werkzeugs <a href="../de/TechDraw_Dimension.html" title="TechDraw Dimension/de">Ma&szlig;</a> kann man ausw&auml;hlen, wie Kreise und B&ouml;gen behandelt werden sollen: <span style="font-size:small;"><a href="../de/Release_notes_1.0.html" title="Release notes 1.0/de">eingef&uuml;hrt in 1.0</a></span>
 <ul><li><i>Auto</i>: Das Werkzeug wendet den Radius auf B&ouml;gen und den Durchmesser auf Kreise an.</li>
 <li><i>Durchmesser</i>: Das Werkzeug wendet den Durchmesser auf alle an.</li>
 <li><i>Radius</i>: Das Werkzeug wendet den Radius auf alle an.</li></ul></li></ul>
@@ -286,12 +286,12 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260112072539
+Cached time: 20260112072714
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.113 seconds
-Real time usage: 0.157 seconds
+CPU time usage: 0.100 seconds
+Real time usage: 0.143 seconds
 Preprocessor visited node count: 635/1000000
 Post&#8208;expand include size: 28287/2097152 bytes
 Template argument size: 10623/2097152 bytes
@@ -302,19 +302,19 @@ Unstrip post&#8208;expand size: 1722/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   24.546      1 -total
- 33.25%    8.162      1 Template:TechDraw_Tools_navi/de
- 17.21%    4.224      2 Template:Navigation_menu_2
- 13.85%    3.399      2 Template:Docnav/de
-  9.41%    2.311     33 Template:Version/de
-  8.02%    1.968      1 Template:Userdocnavi/de
-  7.32%    1.796      2 Template:Button
-  7.26%    1.783      2 Template:MenuCommand
-  5.98%    1.469      1 Template:TOCright
-  5.41%    1.328      1 Template:KEY
+100.00%   26.792      1 -total
+ 23.16%    6.204      1 Template:TechDraw_Tools_navi/de
+ 22.20%    5.948      1 Template:Userdocnavi/de
+ 13.19%    3.533      2 Template:Navigation_menu_2
+  9.61%    2.575      2 Template:Button
+  8.95%    2.397     33 Template:Version/de
+  8.82%    2.362      2 Template:Docnav/de
+  7.43%    1.991      1 Template:KEY
+  6.34%    1.698      2 Template:MenuCommand
+  5.00%    1.339      1 Template:TOCright
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:95107-0!canonical and timestamp 20260112072539 and revision id 1737252. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:95107-0!canonical and timestamp 20260112072714 and revision id 1737254. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
