--- a/wiki/de/External_workbenches.html
+++ b/wiki/de/External_workbenches.html
@@ -1,10 +1,10 @@
 <link href="../site.css" rel="stylesheet" type="text/css"/><div class="mw-page-container"><h1 id="firstHeading" class="firstHeading mw-first-heading"><span class="mw-page-title-main">External workbenches/de</span></h1><?xml encoding="UTF-8"><div class="mw-content-ltr mw-parser-output" lang="de" dir="ltr"><div class="mw-pt-languages noprint navigation-not-searchable" lang="en" dir="ltr"><div class="mw-pt-languages-label">Other languages:</div><ul class="mw-pt-languages-list"><li><a href="../index.php?title=Special;Translate&amp;group=page-External+workbenches&amp;language=&amp;task=view.html" class="new" title="Start translation for this language" lang="" dir="ltr"></a></li>
-<li><span class="mw-pt-languages-selected mw-pt-progress mw-pt-progress--high" lang="de" dir="ltr">Deutsch</span></li>
+<li><span class="mw-pt-languages-selected mw-pt-progress mw-pt-progress--complete" lang="de" dir="ltr">Deutsch</span></li>
 <li><a href="../External_workbenches.html" class="mw-pt-languages-ui mw-pt-progress mw-pt-progress--complete" title="External workbenches (100% translated)" lang="en" dir="ltr">English</a></li>
 <li><a href="../es/External_workbenches.html" class="mw-pt-progress mw-pt-progress--med" title="Bancos de trabajo externos (53% translated)" lang="es" dir="ltr">espa&ntilde;ol</a></li>
 <li><a href="../fr/External_workbenches.html" class="mw-pt-progress mw-pt-progress--high" title="Ateliers externes (99% translated)" lang="fr" dir="ltr">fran&ccedil;ais</a></li>
 <li><a href="../it/External_workbenches.html" class="mw-pt-progress mw-pt-progress--high" title="Ambienti complementari (99% translated)" lang="it" dir="ltr">italiano</a></li>
-<li><a href="../pl/External_workbenches.html" class="mw-pt-progress mw-pt-progress--high" title="Zewn&#281;trzne &#347;rodowiska pracy (99% translated)" lang="pl" dir="ltr">polski</a></li>
+<li><a href="../pl/External_workbenches.html" class="mw-pt-progress mw-pt-progress--complete" title="Zewn&#281;trzne &#347;rodowiska pracy (100% translated)" lang="pl" dir="ltr">polski</a></li>
 <li><a href="../pt/External_workbenches.html" class="mw-pt-progress mw-pt-progress--low" title="External workbenches (1% translated)" lang="pt" dir="ltr">portugu&ecirc;s</a></li>
 <li><a href="../pt-br/External_workbenches.html" class="mw-pt-progress mw-pt-progress--low" title="Bancadas de trabalho externas (1% translated)" lang="pt-BR" dir="ltr">portugu&ecirc;s do Brasil</a></li>
 <li><a href="../ro/External_workbenches.html" class="mw-pt-progress mw-pt-progress--low" title="Ateliere Externe (1% translated)" lang="ro" dir="ltr">rom&acirc;n&#259;</a></li>
@@ -1176,16 +1176,15 @@
 <td>furti
 </td>
 <td><a rel="nofollow" class="external free" href="https://github.com/furti/FreeCAD-Reporting">https://github.com/furti/FreeCAD-Reporting</a>
-<div lang="en" dir="ltr" class="mw-content-ltr">
-</div></td></tr>
+</td></tr>
 <tr>
 <td><span typeof="mw:File"><a href="../index.php?title=FreecadRobustMCPBridge.svg&amp;filetimestamp=20260111060448&amp;.html" class="mw-file-description"><img src="../File/FreecadRobustMCPBridge.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span>
 </td>
-<td><a href="../Robust_MCP_Bridge_Workbench.html" title="Robust MCP Bridge Workbench">Robust MCP Bridge</a>
+<td><a href="../index.php?title=Robust_MCP_Bridge_Workbench/de&amp;action=edit&amp;redlink=1.html" class="new" title="Robust MCP Bridge Workbench/de (page does not exist)">Robuste MCP-Br&uuml;cke</a>
 </td>
-<td>Information and data
+<td>Informationen und Daten
 </td>
-<td>The Bridge workbench is designed to provide an interface between FreeCAD and the <a rel="nofollow" class="external text" href="https://pypi.org/project/freecad-robust-mcp/">Robust MCP Server</a> to enable AI assistants (like Claude) to control FreeCAD via the Model Context Protocol (MCP). It provides XML-RPC and JSON-RPC interfaces for external automation.
+<td>Der externe Arbeitsbereich Robust MCP Bridge ist als Schnittstelle zwischen FreeCAD und dem <a rel="nofollow" class="external text" href="https://pypi.org/project/freecad-robust-mcp/">Robust MCP Server</a> konzipiert, um KI-Assistenten (wie Claude) die Steuerung von FreeCAD &uuml;ber das Model Context Protocol (MCP) zu erm&ouml;glichen. Es bietet XML-RPC- und JSON-RPC-Schnittstellen f&uuml;r die externe Automatisierung.
 </td>
 <td>spkane
 </td>
@@ -1194,7 +1193,6 @@
 <td><span typeof="mw:File"><a href="../index.php?title=AddonManager.svg&amp;filetimestamp=20250123011258&amp;.html" class="mw-file-description"><img src="../File/AddonManager.svg" decoding="async" width="24" height="24" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span>
 </td>
 <td>
-
 </td></tr>
 <tr>
 <td><span typeof="mw:File"><a href="../index.php?title=WebTools_workbench_icon.svg&amp;filetimestamp=20200208234602&amp;.html" class="mw-file-description"><img src="../File/WebTools_workbench_icon.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span>
@@ -2072,33 +2070,33 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260111212145
+Cached time: 20260112073942
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.341 seconds
-Real time usage: 0.684 seconds
-Preprocessor visited node count: 452/1000000
+CPU time usage: 0.334 seconds
+Real time usage: 0.444 seconds
+Preprocessor visited node count: 451/1000000
 Post&#8208;expand include size: 8049/2097152 bytes
 Template argument size: 2458/2097152 bytes
 Highest expansion depth: 5/100
 Expensive parser function count: 0/100
 Unstrip recursion depth: 0/20
-Unstrip post&#8208;expand size: 2761/5000000 bytes
+Unstrip post&#8208;expand size: 2770/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   29.442      1 -total
- 29.56%    8.702      1 Template:Version/de
- 23.57%    6.938      1 Template:Userdocnavi/de
- 16.21%    4.772      1 Template:KEY
-  9.61%    2.828      1 Template:TOCright
-  9.08%    2.674      2 Template:Docnav/de
-  8.64%    2.545      2 Template:FileName
-  5.65%    1.664      1 Template:Navigation_menu_2
+100.00%   12.216      1 -total
+ 23.22%    2.837      2 Template:Docnav/de
+ 20.73%    2.533      1 Template:Userdocnavi/de
+ 18.93%    2.312      1 Template:Version/de
+ 12.06%    1.473      1 Template:TOCright
+ 11.55%    1.411      1 Template:KEY
+  8.14%    0.994      2 Template:FileName
+  8.01%    0.979      1 Template:Navigation_menu_2
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:98706-0!canonical and timestamp 20260111212144 and revision id 1736441. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:98706-0!canonical and timestamp 20260112073942 and revision id 1737264. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
