--- a/wiki/pl/Preferences_Editor.html
+++ b/wiki/pl/Preferences_Editor.html
@@ -1,13 +1,13 @@
 <link href="../site.css" rel="stylesheet" type="text/css"/><div class="mw-page-container"><h1 id="firstHeading" class="firstHeading mw-first-heading"><span class="mw-page-title-main">Preferences Editor/pl</span></h1><?xml encoding="UTF-8"><div class="mw-content-ltr mw-parser-output" lang="pl" dir="ltr"><div class="mw-pt-languages noprint navigation-not-searchable" lang="en" dir="ltr"><div class="mw-pt-languages-label">Other languages:</div><ul class="mw-pt-languages-list"><li><a href="../index.php?title=Special;Translate&amp;group=page-Preferences+Editor&amp;language=&amp;task=view.html" class="new" title="Start translation for this language" lang="" dir="ltr"></a></li>
 <li><a href="../id/Preferences_Editor.html" class="mw-pt-progress mw-pt-progress--low" title="Preferences Editor (7% translated)" lang="id" dir="ltr">Bahasa Indonesia</a></li>
-<li><a href="../de/Preferences_Editor.html" class="mw-pt-progress mw-pt-progress--high" title="Voreinstellungseditor (99% translated)" lang="de" dir="ltr">Deutsch</a></li>
+<li><a href="../de/Preferences_Editor.html" class="mw-pt-progress mw-pt-progress--complete" title="Voreinstellungseditor (100% translated)" lang="de" dir="ltr">Deutsch</a></li>
 <li><a href="../Preferences_Editor.html" class="mw-pt-languages-ui mw-pt-progress mw-pt-progress--complete" title="Preferences Editor (100% translated)" lang="en" dir="ltr">English</a></li>
 <li><a href="../tr/Preferences_Editor.html" class="mw-pt-progress mw-pt-progress--low" title="Se&ccedil;enekler Penceresi (5% translated)" lang="tr" dir="ltr">T&uuml;rk&ccedil;e</a></li>
 <li><a href="../es/Preferences_Editor.html" class="mw-pt-progress mw-pt-progress--low" title="Editor de preferencias (11% translated)" lang="es" dir="ltr">espa&ntilde;ol</a></li>
 <li><a href="../fr/Preferences_Editor.html" class="mw-pt-progress mw-pt-progress--high" title="R&eacute;glage des pr&eacute;f&eacute;rences (99% translated)" lang="fr" dir="ltr">fran&ccedil;ais</a></li>
 <li><a href="../hr/Preferences_Editor.html" class="mw-pt-progress mw-pt-progress--low" title="Ure&#273;iva&#269; postavki (3% translated)" lang="hr" dir="ltr">hrvatski</a></li>
 <li><a href="../it/Preferences_Editor.html" class="mw-pt-progress mw-pt-progress--med" title="Impostare le preferenze (49% translated)" lang="it" dir="ltr">italiano</a></li>
-<li><span class="mw-pt-languages-selected mw-pt-progress mw-pt-progress--high" lang="pl" dir="ltr">polski</span></li>
+<li><span class="mw-pt-languages-selected mw-pt-progress mw-pt-progress--complete" lang="pl" dir="ltr">polski</span></li>
 <li><a href="../pt/Preferences_Editor.html" class="mw-pt-progress mw-pt-progress--low" title="Editor de prefer&ecirc;ncias (8% translated)" lang="pt" dir="ltr">portugu&ecirc;s</a></li>
 <li><a href="../pt-br/Preferences_Editor.html" class="mw-pt-progress mw-pt-progress--med" title="Editor de Prefer&ecirc;ncias (27% translated)" lang="pt-BR" dir="ltr">portugu&ecirc;s do Brasil</a></li>
 <li><a href="../ro/Preferences_Editor.html" class="mw-pt-progress mw-pt-progress--low" title="Preferences Editor (5% translated)" lang="ro" dir="ltr">rom&acirc;n&#259;</a></li>
@@ -523,7 +523,6 @@
 <p><span typeof="mw:File"><a href="../index.php?title=Preferences_General_Page_Help.png&amp;filetimestamp=20240517105829&amp;.html" class="mw-file-description"><img src="../File/Preferences_General_Page_Help.png" decoding="async" width="400" height="259" class="mw-file-element" data-file-width="600" data-file-height="388"></a></span>
 </p><p>Na tej stronie mo&#380;na okre&#347;li&#263; nast&#281;puj&#261;ce parametry:
 </p>
-<div class="mw-translate-fuzzy">
 <table class="wikitable float-right mw-collapsible mw-uncollapsed">
 <tbody><tr>
 <th style="width: 33%;">Nazwa
@@ -545,7 +544,7 @@
 <td><b>Wy&#347;wietlanie</b>.
 </td>
 <td>Okre&#347;la miejsce wy&#347;wietlania dokumentacji. Dost&#281;pne opcje to:
-<ul><li><b>W domy&#347;lnej przegl&#261;darce internetowej Twojego systemu</b>: Dokumentacja jest wy&#347;wietlana w domy&#347;lnej przegl&#261;darce internetowej.</li>
+<ul><li><b>W domy&#347;lnej przegl&#261;darce internetowej</b>: Dokumentacja jest wy&#347;wietlana w domy&#347;lnej przegl&#261;darce internetowej.</li>
 <li><b>W zak&#322;adce programu FreeCAD</b>: Dokumentacja jest wy&#347;wietlana na nowej karcie w <a href="../pl/Main_View_Area.html" title="Main View Area/pl">G&#322;&oacute;wnym obszarze widoku</a>. <span style="font-size:small;"><a href="../pl/Release_notes_1.0.html" title="Release notes 1.0/pl">dost&#281;pne w wersji 1.0</a></span>: Nie mo&#380;na ju&#380; u&#380;ywa&#263;.</li>
 <li><b>W osobnym, mo&#380;liwym do osadzenia oknie dialogowym</b>: Dokumentacja jest wy&#347;wietlana w osobnym oknie dialogowym. To okno dialogowe mo&#380;e by&#263; na przyk&#322;ad zadokowane na g&oacute;rze <a href="../pl/Combo_View.html" title="Combo View/pl">Widoku po&#322;&#261;czonego</a>. <span style="font-size:small;"><a href="../pl/Release_notes_1.0.html" title="Release notes 1.0/pl">dost&#281;pne w wersji 1.0</a></span>: Nie mo&#380;e by&#263; ju&#380; u&#380;ywana.</li></ul>
 </td></tr>
@@ -554,7 +553,6 @@
 </td>
 <td>Okre&#347;la opcjonalny niestandardowy arkusz styl&oacute;w. Nieu&#380;ywany w Wiki.
 </td></tr></tbody></table>
-</div>
 <p><span id="Display"></span>
 </p>
 <h2><span id="Wy.C5.9Bwietlanie"></span><span class="mw-headline" id="Wy&#347;wietlanie">Wy&#347;wietlanie</span></h2>
@@ -1313,35 +1311,35 @@ Dost&#281;pne opcje to:
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260111210150
+Cached time: 20260112074701
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.203 seconds
-Real time usage: 0.278 seconds
-Preprocessor visited node count: 2599/1000000
-Post&#8208;expand include size: 28961/2097152 bytes
-Template argument size: 10673/2097152 bytes
+CPU time usage: 0.197 seconds
+Real time usage: 0.260 seconds
+Preprocessor visited node count: 2598/1000000
+Post&#8208;expand include size: 28945/2097152 bytes
+Template argument size: 10657/2097152 bytes
 Highest expansion depth: 7/100
 Expensive parser function count: 0/100
 Unstrip recursion depth: 0/20
-Unstrip post&#8208;expand size: 4104/5000000 bytes
+Unstrip post&#8208;expand size: 4113/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   55.260      1 -total
- 13.31%    7.355    233 Template:MenuCommand
-  9.44%    5.218     11 Template:Value
-  8.90%    4.919      1 Template:Userdocnavi/pl
-  7.11%    3.930     50 Template:Version/pl
-  6.44%    3.559      3 Template:PropertyView
-  6.02%    3.325     11 Template:Incode
-  5.72%    3.159      2 Template:VersionMinus/pl
-  5.19%    2.869      1 Template:FALSE/pl
-  4.84%    2.673      2 Template:Docnav/pl
+100.00%   55.097      1 -total
+ 13.77%    7.585    233 Template:MenuCommand
+ 10.47%    5.766      3 Template:PropertyView
+  7.15%    3.939      1 Template:Userdocnavi/pl
+  6.85%    3.772     11 Template:Value
+  5.02%    2.768     50 Template:Version/pl
+  4.96%    2.735      2 Template:Docnav/pl
+  4.95%    2.725      1 Template:Version
+  4.55%    2.509      3 Template:Variable
+  4.49%    2.473      2 Template:VersionMinus/pl
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:675-0!canonical and timestamp 20260111210150 and revision id 1736301. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:675-0!canonical and timestamp 20260112074700 and revision id 1737266. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
