--- a/wiki/cs/Manual;Traditional_modeling,_the_CSG_way.html
+++ b/wiki/cs/Manual;Traditional_modeling,_the_CSG_way.html
@@ -187,23 +187,23 @@
 <p><br>
 </p>
 <div class="docnav">
-    <div><span class="mw-default-size" typeof="mw:File"><span><img src="../File/Arrow-left.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></span></span> <a href="../Manual;All_workbenches_at_a_glance.html" title="Manual:All workbenches at a glance">All workbenches at a glance</a></div>
-    <div><a href="../Manual;Traditional_2D_drafting.html" title="Manual:Traditional 2D drafting">Traditional 2D drafting</a>
+    <div><span class="mw-default-size" typeof="mw:File"><span><img src="../File/Arrow-left.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></span></span> <a href="../Manual;All_workbenches_at_a_glance.html" title="Manual:All workbenches at a glance">P&#345;ehled v&scaron;ech pracovn&iacute;ch ploch</a></div>
+    <div><a href="../Manual;Traditional_2D_drafting.html" title="Manual:Traditional 2D drafting">Tradi&#269;n&iacute; 2D kreslen&iacute;</a>
  <span class="mw-default-size" typeof="mw:File"><span><img src="../File/Arrow-right.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></span></span></div>
     <div><a href="../Manual;Introduction.html" title="Manual:Introduction">Manual start</a>
  <span class="mw-default-size" typeof="mw:File"><span><img src="../File/Crystal_Clear_manual.png" decoding="async" width="24" height="24" class="mw-file-element" data-file-width="128" data-file-height="128"></span></span></div>
 </div>
 <!-- 
 NewPP limit report
-Cached time: 20260112085414
+Cached time: 20260112085431
 Cache expiry: 86400
 Reduced expiry: false
 Complications: []
-CPU time usage: 0.096 seconds
-Real time usage: 0.202 seconds
+CPU time usage: 0.075 seconds
+Real time usage: 0.097 seconds
 Preprocessor visited node count: 80/1000000
-Post&#8208;expand include size: 9121/2097152 bytes
-Template argument size: 832/2097152 bytes
+Post&#8208;expand include size: 9139/2097152 bytes
+Template argument size: 844/2097152 bytes
 Highest expansion depth: 5/100
 Expensive parser function count: 0/100
 Unstrip recursion depth: 0/20
@@ -211,14 +211,14 @@ Unstrip post&#8208;expand size: 2814/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   15.054      1 -total
- 62.61%    9.426      1 Template:Manual:TOC
- 53.61%    8.071      1 Manual:Summary/cs
- 18.11%    2.726      1 Template:Caption
- 16.49%    2.483      2 Template:Docnav
+100.00%    8.225      1 -total
+ 60.18%    4.950      1 Template:Manual:TOC
+ 45.68%    3.757      1 Manual:Summary/cs
+ 21.87%    1.799      2 Template:Docnav
+ 14.22%    1.170      1 Template:Caption
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:410772-0!canonical and timestamp 20260112085414 and revision id 1737322. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:410772-0!canonical and timestamp 20260112085431 and revision id 1737324. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
