--- a/wiki/cs/Manual;Traditional_modeling,_the_CSG_way.html
+++ b/wiki/cs/Manual;Traditional_modeling,_the_CSG_way.html
@@ -179,7 +179,7 @@
 </p><p><b>Downloads</b>
 </p>
 <ul><li>The file produced in this exercise: <a rel="nofollow" class="external free" href="https://github.com/yorikvanhavre/FreeCAD-manual/blob/master/files/table.FCStd">https://github.com/yorikvanhavre/FreeCAD-manual/blob/master/files/table.FCStd</a></li></ul>
-<p><b>Read more</b>
+<p><b>Dal&scaron;&iacute; informace:</b>
 </p>
 <ul><li><a href="../Part_Workbench.html" title="Part Workbench">The Part Workbench</a></li>
 <li><a rel="nofollow" class="external text" href="https://github.com/FreeCAD/FreeCAD-addons">The FreeCAD addons repository</a></li>
@@ -195,12 +195,12 @@
 </div>
 <!-- 
 NewPP limit report
-Cached time: 20260112085431
+Cached time: 20260112085507
 Cache expiry: 86400
 Reduced expiry: false
 Complications: []
-CPU time usage: 0.075 seconds
-Real time usage: 0.097 seconds
+CPU time usage: 0.084 seconds
+Real time usage: 0.113 seconds
 Preprocessor visited node count: 80/1000000
 Post&#8208;expand include size: 9139/2097152 bytes
 Template argument size: 844/2097152 bytes
@@ -211,14 +211,14 @@ Unstrip post&#8208;expand size: 2814/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%    8.225      1 -total
- 60.18%    4.950      1 Template:Manual:TOC
- 45.68%    3.757      1 Manual:Summary/cs
- 21.87%    1.799      2 Template:Docnav
- 14.22%    1.170      1 Template:Caption
+100.00%    9.265      1 -total
+ 54.25%    5.027      1 Template:Manual:TOC
+ 41.22%    3.819      1 Manual:Summary/cs
+ 21.47%    1.989      2 Template:Docnav
+ 20.56%    1.905      1 Template:Caption
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:410772-0!canonical and timestamp 20260112085431 and revision id 1737324. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:410772-0!canonical and timestamp 20260112085507 and revision id 1737326. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
