--- a/wiki/cs/Manual;Traditional_modeling,_the_CSG_way.html
+++ b/wiki/cs/Manual;Traditional_modeling,_the_CSG_way.html
@@ -66,7 +66,7 @@
 <li><a href="../Manual;Creating_parametric_objects.html" title="Manual:Creating parametric objects">Creating parametric objects</a></li>
 <li><a href="../Manual;Creating_interface_tools.html" title="Manual:Creating interface tools">Creating interface tools</a></li></ul></li>
 <li><a href="../Manual;The_Community.html" title="Manual:The Community">The community</a></li></ul></div>
-<p><a rel="nofollow" class="external text" href="https://en.wikipedia.org/wiki/Constructive_solid_geometry">CSG</a> stands for Constructive Solid Geometry and describes the fundamental way to work with solid 3D geometry. It involves creating complex objects by adding or removing pieces from solids using Boolean operations such as union, subtraction, or intersection.
+<p><a rel="nofollow" class="external text" href="https://en.wikipedia.org/wiki/Constructive_solid_geometry">CSG</a> je zkratka pro Constructive Solid Geometry (konstruktivn&iacute; pevn&aacute; geometrie) a popisuje z&aacute;kladn&iacute; zp&#367;sob pr&aacute;ce s pevnou 3D geometri&iacute;. Zahrnuje vytv&aacute;&#345;en&iacute; slo&#382;it&yacute;ch objekt&#367; p&#345;id&aacute;v&aacute;n&iacute;m nebo odeb&iacute;r&aacute;n&iacute;m &#269;&aacute;st&iacute; z pevn&yacute;ch t&#283;les pomoc&iacute; booleovsk&yacute;ch operac&iacute;, jako je sjednocen&iacute;, ode&#269;ten&iacute; nebo pr&#367;nik.
 </p><p>As discussed earlier in this manual, FreeCAD supports various types of geometry. However, the preferred and most practical type for designing real-world 3D objects in FreeCAD is solid <a rel="nofollow" class="external text" href="https://en.wikipedia.org/wiki/Boundary_representation">BREP</a> geometry, primarily handled by the Part Workbench. BREP defines 3D objects by specifying their spatial boundaries. The key aspects of BREP include: faces, the surface elements of the object; edges, the boundary lines where two faces meet; and vertices, the points where edges converge.
 </p><p>BREP offers several advantages. First, it defines surfaces using mathematical equations, enabling precise and accurate modeling. This precision is crucial for engineering applications where exact dimensions are required. Additionally, BREP provides smooth and detailed surfaces, unlike <a rel="nofollow" class="external text" href="https://en.wikipedia.org/wiki/Polygon_mesh">polygon meshes</a> that approximate curved surfaces with facets. This is similar to the difference between vector images, which scale without losing quality, and bitmap images, which can appear pixelated when enlarged. BREP retains comprehensive topological information about the object, including relationships between faces, edges, and vertices, which is essential for complex operations like Boolean calculations and filleting.
 </p><p><span class="mw-default-size" typeof="mw:File"><a href="../index.php?title=Mesh_vs_brep.jpg&amp;filetimestamp=20151220162026&amp;.html" class="mw-file-description"><img src="../File/Mesh_vs_brep.jpg" decoding="async" width="1101" height="566" class="mw-file-element" data-file-width="1101" data-file-height="566"></a></span>
@@ -195,12 +195,12 @@
 </div>
 <!-- 
 NewPP limit report
-Cached time: 20260112085507
+Cached time: 20260112085643
 Cache expiry: 86400
 Reduced expiry: false
 Complications: []
-CPU time usage: 0.084 seconds
-Real time usage: 0.113 seconds
+CPU time usage: 0.088 seconds
+Real time usage: 0.131 seconds
 Preprocessor visited node count: 80/1000000
 Post&#8208;expand include size: 9139/2097152 bytes
 Template argument size: 844/2097152 bytes
@@ -211,14 +211,14 @@ Unstrip post&#8208;expand size: 2814/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%    9.265      1 -total
- 54.25%    5.027      1 Template:Manual:TOC
- 41.22%    3.819      1 Manual:Summary/cs
- 21.47%    1.989      2 Template:Docnav
- 20.56%    1.905      1 Template:Caption
+100.00%   12.095      1 -total
+ 59.90%    7.245      1 Template:Manual:TOC
+ 45.96%    5.559      1 Manual:Summary/cs
+ 23.43%    2.834      2 Template:Docnav
+ 12.89%    1.559      1 Template:Caption
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:410772-0!canonical and timestamp 20260112085507 and revision id 1737326. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:410772-0!canonical and timestamp 20260112085643 and revision id 1737328. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
